--- a/index.html
+++ b/index.html
@@ -1,17 +1,12 @@
 <html>
   Hi Welcome to Jenkins World
-  Connect with SSH
-  gfxhi;ugfgh
+  We are deovops
 </html>
 
 
 <html>
 	Hello
 </html>
-
-
-
-THis new bug fix
 
 
 
