--- a/index.html
+++ b/index.html
@@ -1,14 +1,146 @@
+<!DOCTYPE html>
 <html>
-  Hi Welcome to Jenkins World
-  We are deovops
+<head>
+<style>
+.container {
+  position: relative;
+}
+
+.green-box {
+  position: absolute;
+  background: lightgreen;
+  width: 55%;
+  left: 300px;
+  top: +50px;
+  height: 60px;
+}
+
+.zoom-in-out {
+  transition: transform 2s ease;
+  animation: zoomInOut 4s linear infinite;
+}
+
+@keyframes zoomInOut {
+  0%, 100% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2); /* Zoom in to 120% */
+  }
+}
+
+/* Tab Styles */
+.tab {
+  position: absolute;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+}
+
+/* Style the tab buttons as stars with green and red colors */
+.tab button {
+  background-color: inherit;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  transition: 0.3s;
+  animation: blinkTab 1s infinite; /* Blinking animation */
+  font-size: 24px;
+  font-style: italic; /* Set text to italic */
+  color: red; /* Set the default color to red */
+}
+
+.tab button:first-child {
+  color: green; /* Set the color of the first tab to green */
+}
+
+@keyframes blinkTab {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+}
+
+/* Change color on hover */
+.tab button:hover {
+  background-color: #ddd;
+  animation: none; /* Disable blinking on hover */
+}
+
+/* Create content container for tabs */
+.tabcontent {
+  display: none;
+  padding: 20px;
+  position: absolute;
+  top: 100px;
+  left: 0;
+  background-color: white;
+  width: 100%;
+  font-style: italic; /* Set text in the tab content to italic */
+}
+
+/* Show the specific tab content when the tab button is clicked */
+.tab button.active {
+  background-color: #ccc;
+}
+
+/* Centered, bold, and italic text at the top */
+.centered-text {
+  text-align: center;
+  font-weight: bold;
+  font-style: italic;
+}
+</style>
+</head>
+<body style="background-color: skyblue;">
+
+<div class="centered-text">
+  <h1>Welcome to the world of Devops</h1>
+</div>
+
+<p>This quote emphasizes that DevOps is not a destination but a journey of continuous improvement, collaboration, and automation in software development and IT operations. It reminds us that DevOps is about fostering a culture of collaboration, delivering value faster, and adapting to change continually.</p>
+
+<div class="container">
+  <div class="green-box zoom-in-out">DevOps is not a goal, but a never-ending process of continual improvement</div>
+</div>
+
+<!-- Add a high-resolution DevOps image from Google -->
+<div class="image-container">
+  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTC9h4Ly5DCLOeMpy26KLNAqm7sAzMLbS_fgg&usqp=CAU" alt="DevOps Image" style="width: 100%; height: auto;">
+  <!-- Tabbed content -->
+  <div class="tab">
+    <button class="tablinks" onclick="openTab(event, 'Devops')">Devops</button>
+    <button class="tablinks" onclick="openTab(event, 'AWS')">AWS</button>
+  </div>
+
+  <div id="Devops" class="tabcontent">
+    <h3>Devops</h3>
+    <p>DevOps engineer is an IT generalist who should have a wide-ranging knowledge of both development and operations, including coding, infrastructure management, system administration, and DevOps toolchains. DevOps engineers should also possess interpersonal skills since they work across company silos to create a more collaborative environment.</p>
+  </div>
+
+  <div id="AWS" class="tabcontent">
+    <h3>AWS</h3>
+    <p>An AWS engineer is an IT professional who creates, maintains, and evolves an AWS cloud infrastructure for running applications.</p>
+  </div>
+</div>
+
+<script>
+function openTab(evt, tabName) {
+  var i, tabcontent, tablinks;
+  tabcontent = document.getElementsByClassName("tabcontent");
+  for (i = 0; i < tabcontent.length; i++) {
+    tabcontent[i].style.display = "none";
+  }
+  tablinks = document.getElementsByClassName("tablinks");
+  for (i = 0; i < tablinks.length; i++) {
+    tablinks[i].classList.remove("active");
+  }
+  document.getElementById(tabName).style.display = "block"; // Fix the typo here
+  evt.currentTarget.classList.add("active");
+}
+</script>
+</body>
 </html>
-
-
-<html>
-	Hello
-</html>
-
-
-
-
-this is the check the stach
